# ascii_render

./: Cargo.toml  README.md
src/: camera.rs  homo_coord.rs  lib.rs  light.rs  main.rs  matrix.rs  model.rs  pixel.rs  plane.rs  point.rs  sphere.rs  vector.rs  world.rs
