[package]
name = "ascii_render"
version = "1.0.0"
edition = "2021"
authors = ["ink-carp","18020970773@163.com"]
repository = "github.com/ink-carp/ascii_render"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"

[lib]
path = "./src/lib.rs"
